<resources>
    <string name="app_name">Ambulance App</string>
    <string name="select_user_type_head_text">select dashboard</string>
    <string name="admin_name">admin</string>
    <string name="user_name">user</string>
    <string name="reg_pre_text">register as</string>
    <string name="get_fir_name">First name</string>
    <string name="get_las_name">Last name</string>
    <string name="get_phn_number">Phone Number</string>
    <string name="get_user_name">Username</string>
    <string name="get_pass">Password</string>
    <string name="pass_req_1">Must be 6 characters or more</string>
    <string name="pass_req_2">Must hava at least one number</string>
    <string name="pass_req_3">Must have at least one symbol</string>
    <string name="con_pass">Confirm password</string>
    <string name="usernameErrMsg">"Username cannot be less than 4 or more than 10 characters"</string>
    <string name="nxt">next</string>
    <string name="code_log_title_text">login details</string>
    <string name="empty_field_msg">This field cannot be empty</string>
    <string name="invalid_phn_num_text">Invalid Phone Number</string>
    <string name="invalid_text">Invalid</string>
    <string name="secretkeytitle">secret key</string>
    <string name="secretkeytext">
        This unique key will be used to verify your authenticity, to change login information,
        and have access to other parts of the app. Copy cause it cant be retrieved and so will
        the account.
    </string>
    <string name="secretKeyHolder">093-464</string>
    <string name="finisedText">finished</string>
    <string name="warn">warning</string>
    <string name="succces">success</string>
    <string name="errorWord">error</string>
    <string name="loading">loading...</string>
    <string name="cancel">cancel</string>
    <string name="welcomemessage">welcome,</string>
    <string name="fp">forgot password</string>
    <string name="logintext">login</string>
    <string name="get_secret_key">Secret Key...</string>
    <string name="get_verify_phone">Enter phone number</string>
    <string name="title_head_get_secret_key">enter secret key</string>
</resources>