<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/secretKeyContainer"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_below="@id/bck_btn"
android:layout_centerVertical="true"
android:layout_marginTop="297dp"
android:orientation="vertical"
android:visibility="gone">

<TextView
    android:id="@+id/secretTextHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/anton"
    android:text="@string/secretkeytitle"
    android:textAlignment="center"
    android:textAllCaps="true"
    android:textSize="35sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:paddingHorizontal="20dp"
    android:text="@string/secretkeytext"
    android:textAlignment="center"
    android:textSize="22sp"/>

<TextView
    android:id="@+id/secretKeyHold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:textSize="40sp"/>

<Button
    android:id="@+id/finalregbutton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_gravity="center_horizontal"
    android:backgroundTint="@color/primary"
    android:text="@string/finisedText"
    android:textAllCaps="true"
    android:layout_marginTop="50dp"/>

</LinearLayout>