<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_marginHorizontal="20dp"
    android:layout_centerInParent="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardCornerRadius="100dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/logimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/admin"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/logTitleTexe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text=""
        android:textAllCaps="true"
        android:fontFamily="@font/anton"
        android:textAlignment="center"
        />

    <!--     LOGIN   -->
    <LinearLayout
        android:id="@+id/logFirstPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxBackgroundColor="@color/secondary"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:layout_marginVertical="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/get_user_name"
                android:id="@+id/logUsernameHold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/secondary"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/get_pass"
                android:inputType="textPassword"
                android:id="@+id/logPassHold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fp_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fp"
            android:textSize="20sp"
            android:textAlignment="viewEnd"
            android:layout_marginVertical="10dp"
            android:textColor="@color/pal_blue"/>

        <Button
            android:id="@+id/logBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logintext"
            android:layout_marginVertical="10dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/primary"/>
    </LinearLayout>

    <!--    SECRET KEY ASK     -->
    <LinearLayout
        android:id="@+id/phn_sek_hold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:background="@color/secondary"
            app:boxCornerRadiusBottomStart="10dp"
            android:hint="@string/get_secret_key"
            android:id="@+id/secretKey_getPhn_inputfield">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="15sp"
                android:inputType="number"
                android:id="@+id/secretKeyinputfield"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/secret_key_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/nxt"
            android:textAllCaps="true"
            android:backgroundTint="@color/primary"
            android:textSize="15sp"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>

    <!--  CHANGE PASSWORD CONTAINER  -->
    <LinearLayout
        android:id="@+id/ch_pass_Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxBackgroundColor="@color/secondary"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:passwordToggleEnabled="true"
            android:layout_marginVertical="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/get_pass"
                android:id="@+id/ch_pass_holder"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ch_pass_req1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/pass_req_1"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/ch_pass_req2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/pass_req_2"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/ch_pass_req3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/pass_req_3"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxBackgroundColor="@color/secondary"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:layout_marginVertical="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/con_pass"
                android:id="@+id/ch_con_pass_holder"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ch_con_pass_err_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            />
        <Button
            android:id="@+id/ch_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/finisedText"
            android:textAllCaps="true"
            android:backgroundTint="@color/primary"
            android:textSize="15sp"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>
</LinearLayout>