<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/select_user_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:visibility="visible"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/selectHeadTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/anton"
        android:text="@string/select_user_type_head_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/admin_pointer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectHeadTitle"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="100dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/admin_name"
                android:src="@mipmap/admin" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/admin_name"
            android:textAllCaps="true"
            android:fontFamily="@font/anton"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_pointer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_pointer"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="100dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_name"
                android:src="@mipmap/user"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_name"
            android:textAllCaps="true"
            android:fontFamily="@font/anton"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>